Fix preview on mobile (#662)
* fix content overflowing
* change preview color scheme to white (similar to ampstart)
* align experiment buttons to the left
* fix code formatting
* show truncated demo title in header
* fix product title overflowing sidebar

--- a/templates/css/example.css
+++ b/templates/css/example.css
@@ -33,6 +33,7 @@ pre > code {
 }
 .www-component-desc > pre > code,
 .abe-code pre {
+  white-space: pre-wrap;
   overflow-x: auto;
   padding: 0;
   margin: 0;
@@ -64,9 +65,6 @@ pre > code {
 }
 .abe-preview {
   background: #fff;
-}
-.abe-experiment-warning .abe-experiment-warning-buttons {
-  justify-content: center;
 }
 
 
